--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/main.css">
-  <img src="images/my-logo.png" alt="images/my-logo.png">
 </head>
-<body>
-  <h2> Hi, I'm Alana!</h2>
-  <h3> A Product Designer based in San Francisco</h3>
-  <text>Driven by research and human connection, I solve problems by addressinng user needs and designing for a better future.</text>
-  <img src="images/desktop-proto.png" alt="images/desktop-proto.png">
-  <h6>User Experience Design</h6>
-  <h5>Vision</h5>
-  <text>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</text>
-  <h6>View Case Study</h6>
-  <br></br>
-  <center>
-    <h4>Let's connect!</h4>
-    <br></br>
-    <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png">
-    <img src="images/facebook-icon.png" alt="images/facebook-icon.png">
-    <img src="images/email-icon.png" alt="images/email-icon.png">
-    <h6>Copyright Alana Macedo 2020</h6>
-    </center>
-</body>
+  <body>
+    <header>
+      <img src="images/my-logo.png" alt="images/my-logo.png">
+    </header>
+        <div class="main-container">
+          <h2> Hi, I'm Alana!</h2>
+          <h3> A Product Designer based in San Francisco</h3>
+            <p>Driven by research and human connection, I solve problems by addressinng user needs and designing for a better future.</p>
+          <section>
+            <img src="images/desktop-proto.png" alt="images/desktop-proto.png">
+            <h6>User Experience Design</h6>
+            <h5>Vision</h5>
+              <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+            <h6>View Case Study</h6>
+          </section>
+        </div>
+      <footer>
+        <h4>Let's connect!</h4>
+          <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png">
+          <img src="images/facebook-icon.png" alt="images/facebook-icon.png">
+          <img src="images/email-icon.png" alt="images/email-icon.png">
+        <h6>Copyright Alana Macedo 2020</h6>
+      </footer>
+  </body>
 </html>
