--- a/project.html
+++ b/project.html
@@ -13,10 +13,12 @@
       <img src="images/my-logo.png" alt="images/my-logo.png">
     </header>
     <div class="main-container">
-      <img src="images/Vision-logo.png" alt="project-name" class="project-name">
-      <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-      <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final">VIEW PROTOTYPE</a>
-      <img src="images/desktop-proto.png" alt="images/desktop-proto.png">
+      <div class="box-1">
+        <img src="images/Vision-logo.png" alt="project-name" class="project-name">
+        <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
+        <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final">VIEW PROTOTYPE</a>
+        <img src="images/desktop-proto.png" alt="images/desktop-proto.png">
+      </div>
       <h2>Design roles</h2>
         <p>UX Research and Design
         Branding and Identity
@@ -51,40 +53,42 @@
           </p>
       </section>
       <section>
-        <h1>Research + Discovery</h1>
-          <article>
-            <h3>User Research</h3>
-              <p>I conducted a user survey to better understand how and why users use cloud storage. I knew that users liked that they could quickly share content with others, but I wanted to know if they had a process for brainstorming, such as using
-                mood or vision boards.
-              </p>
-              <img src="images/ux-graph.png" alt="">
-              <p>What people use their cloud storage for most
-              </p>
-              <img src="images/ux-chart.png" alt="">
-              <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
-              </p>
-            <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit">VIEW SURVEY</a>
-          </article>
-          <article>
-            <h3>Competitve Analysis</h3>
-              <img src="images/google-drive.png" alt="">
-              <img src="images/dropbox.png" alt="">
-              <img src="images/icloud.png" alt="">
-              <p>After learning about the most popular cloud storage applications used by my survey participants, I decided to investigate the key differences between Google Drive, Dropbox and iCloud by conducting a SWOT Analysis. I wanted to learn
-                where their strengths are and where they fall short in order to best determine the most important features and how we could enter the market. Some of the strengths were excellent integration and the opportunity to create content within,
-                while a weakness was lack of ability to support tagging. While Google Drive and Dropbox do not support tagging, this creates an opportunity for a competitor to enter the market, which will allow users to connect and collaborate quicker.
-              </p>
-            <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing">VIEW COMPETITIVE ANALYSIS</a>
-          </article>
-          <article>
-            <H3>User Personas</H3>
-              <p>Based on the user survey data, interviews, and Competitive Analysis, I created three personas - A Student, a Researcher, and a Salesman
-              </p>
-              <img src="images/Laura.png" alt="">
-              <img src="images/Jess.png" alt="">
-              <img src="images/Alex.png" alt="">
-            <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1">VIEW USER PERSONAS</a>
-          </article>
+        <div class="box-2">
+          <h1>Research + Discovery</h1>
+            <article>
+              <h3>User Research</h3>
+                <p>I conducted a user survey to better understand how and why users use cloud storage. I knew that users liked that they could quickly share content with others, but I wanted to know if they had a process for brainstorming, such as using
+                  mood or vision boards.
+                </p>
+                <img src="images/ux-graph.png" alt="" class="center">
+                <p>What people use their cloud storage for most
+                </p>
+                <img src="images/ux-chart.png" alt="" class="center">
+                <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
+                </p>
+              <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit">VIEW SURVEY</a>
+            </article>
+            <article>
+              <h3>Competitve Analysis</h3>
+                <img src="images/google-drive.png" alt="" class="google-drive">
+                <img src="images/dropbox.png" alt="" class="dropbox">
+                <img src="images/icloud.png" alt="" class="icloud">
+                <p>After learning about the most popular cloud storage applications used by my survey participants, I decided to investigate the key differences between Google Drive, Dropbox and iCloud by conducting a SWOT Analysis. I wanted to learn
+                  where their strengths are and where they fall short in order to best determine the most important features and how we could enter the market. Some of the strengths were excellent integration and the opportunity to create content within,
+                  while a weakness was lack of ability to support tagging. While Google Drive and Dropbox do not support tagging, this creates an opportunity for a competitor to enter the market, which will allow users to connect and collaborate quicker.
+                </p>
+              <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing">VIEW COMPETITIVE ANALYSIS</a>
+            </article>
+            <article>
+              <H3>User Personas</H3>
+                <p>Based on the user survey data, interviews, and Competitive Analysis, I created three personas - A Student, a Researcher, and a Salesman
+                </p>
+                <img src="images/Laura.png" alt="" class="center">
+                <img src="images/Jess.png" alt="" class="center">
+                <img src="images/Alex.png" alt=""class="center">
+              <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1">VIEW USER PERSONAS</a>
+            </article>
+          </div>
       </section>
 
       <section>
@@ -94,16 +98,16 @@
               <p>Derived from the goals and frustrations,
                 I created User Stories that show the users potential tasks.
               </p>
-              <img src="images/user-stories.png" alt="">
+              <img src="images/user-stories.png" alt="" class="center">
           </aritcle>
           <article>
             <h3>User Flows</h3>
               <p>From the stories, I sketched out each individual flow to begin to create the content strategy.
               </p>
-              <img src="images/onboarding-flow.png" alt="">
-              <img src="images/create-flow.png" alt="">
-              <img src="images/share-flow.png" alt="">
-              <img src="images/move-flow.png" alt="">
+              <img src="images/onboarding-flow.png" alt="" class="center">
+              <img src="images/create-flow.png" alt="" class="center">
+              <img src="images/share-flow.png" alt="" class="center">
+              <img src="images/move-flow.png" alt="" class="center">
             <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing">VIEW USER FLOWS</a>
             <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit">VIEW CONTENT STRATEGY</a>
           </article>
@@ -112,8 +116,8 @@
               <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore,
                 changed the calendar to a vertical scroll that moves with real-time.
               </p>
-              <img src="images/homepage-sketch.png" alt="">
-              <img src="images/homepage-wireframe.png" alt="">
+              <img src="images/homepage-sketch.png" alt="" class="center">
+              <img src="images/homepage-wireframe.png" alt="" class="center">
             <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing">VIEW WIREFRAME SKETCHES</a>
             <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1">VIEW WIREFRAMES</a>
             <h3>Additional Testing</h3>
@@ -122,55 +126,57 @@
                 by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                 higher in the hierarchy.
               </p>
-              <img src="images/user-testing-sketches.png" alt="">
+              <img src="images/user-testing-sketches.png" alt="" class="center">
           </article>
       </section>
       <section>
-        <h1>Branding + Identity</h1>
-            <article>
-              <h3>Research and Sketching</h3>
-                <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
-                </p>
-                <img src="images/mindmap" alt="">
-                <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
-                  about vision.</p>
-                <img src="list-making" alt="">
-                <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
-                  a clear path to reach their destination.
-                </p>
-                <img src="images/vision-sketches.png" alt="">
-            </article>
-            <article>
-              <h3>Refining</h3>
-                <p>After sketching out logos, I knew that the logo was to remain simple in order to convey a clean feel. I brought my favorite designs into Figma and began exploring the concepts until I reached my final design.
-                </p>
-                <img src="images/black-circle-v.png" alt="">
-                <img src="images/galaxy-v.png" alt="">
-                <img src="images/black-v.png" alt="">
-                <img src="images/main-logo.png" alt="">
-            </article>
-            <article>
-              <h3>Style Guide</h3>
-                <p>Logos
-                </p>
-                <img src="images/main-logo.png" alt="">
-                <img src="images/vision-type-logo.png" alt="">
-                <p>Color Palette</p>
-                <img src="images/color-palette.png" alt="">
-                <p>Typeface</p>
-                <p>H1 - Muli Bold 36 pts
-                  Muli ExtraLight 36 pts in template
-                  H2 - Muli Semibold 24 pts
-                  H3 - Muli Semibold 16 pts
-                  H5 - Roboto Regular 14 pts
-                  Body - Muli Regular 14 pts
-                  Pop-ups - Montserrat ExtraLight 24 pts
-                  Montserrat Regular 24 pts when filled in
-                  Buttons - Roboto Black 15 pts
-                  Document Tile - Montserrat Medium 12 pts
-                </p>
-              <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1">VIEW STYLE GUIDE</a>
-            </article>
+        <div class="box-3">
+          <h1>Branding + Identity</h1>
+              <article>
+                <h3>Research and Sketching</h3>
+                  <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
+                  </p>
+                  <img src="images/mindmap" alt="">
+                  <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
+                    about vision.</p>
+                  <img src="images/list-making" alt="">
+                  <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
+                    a clear path to reach their destination.
+                  </p>
+                  <img src="images/vision-sketches.png" alt="" class="center">
+              </article>
+              <article>
+                <h3>Refining</h3>
+                  <p>After sketching out logos, I knew that the logo was to remain simple in order to convey a clean feel. I brought my favorite designs into Figma and began exploring the concepts until I reached my final design.
+                  </p>
+                  <img src="images/black-circle-v.png" alt="">
+                  <img src="images/galaxy-v.png" alt="">
+                  <img src="images/black-v.png" alt="">
+                  <img src="images/main-logo.png" alt="">
+              </article>
+              <article>
+                <h3>Style Guide</h3>
+                  <p>Logos
+                  </p>
+                  <img src="images/main-logo.png" alt="" class="center">
+                  <img src="images/vision-type-logo.png" alt="" class="center">
+                  <p>Color Palette</p>
+                  <img src="images/color-palette.png" alt="" class="center">
+                  <p>Typeface</p>
+                  <p>H1 - Muli Bold 36 pts
+                    Muli ExtraLight 36 pts in template
+                    H2 - Muli Semibold 24 pts
+                    H3 - Muli Semibold 16 pts
+                    H5 - Roboto Regular 14 pts
+                    Body - Muli Regular 14 pts
+                    Pop-ups - Montserrat ExtraLight 24 pts
+                    Montserrat Regular 24 pts when filled in
+                    Buttons - Roboto Black 15 pts
+                    Document Tile - Montserrat Medium 12 pts
+                  </p>
+                <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1">VIEW STYLE GUIDE</a>
+              </article>
+            </div>
         </section>
         <section>
           <h1>Visual Design</h1>
@@ -178,9 +184,9 @@
               <h3>Hi-Fidelity Prototype</h3>
                 <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                   remained cohesive.</p>
-                <img src="images/preference-test-1.png" alt="">
-                <img src="images/preference-test-2.png" alt="">
-                <img src="images/first-hifi.png" alt="">
+                <img src="images/preference-test-1.png" alt="" class="center">
+                <img src="images/preference-test-2.png" alt="" class="center">
+                <img src="images/first-hifi.png" alt="" class="center">
                 <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                   try a new approach that allowed users to easily change without excessive scrolling.
 
@@ -194,10 +200,10 @@
                   could view both their agenda and monthly calendar on their homepage. The Agenda went back to a vertical scroll which the tick would move in real-time. The side navigation bar is collapsible, and it is on every page throughout the
                   prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
                 </p>
-                <img src="images/desktop-1.png" alt="">
-                <img src="images/desktop-2.png" alt="">
-                <img src="images/mobile-1.png" alt="">
-                <img src="images/mobile-2.png" alt="">
+                <img src="images/desktop-1.png" alt="" class="center">
+                <img src="images/desktop-2.png" alt="" class="center">
+                <img src="images/mobile-1.png" alt="" class="center">
+                <img src="images/mobile-2.png" alt="" class="center">
             </article>
             <article>
               <h3>Conclusion + Takeaways</h3>
@@ -213,9 +219,9 @@
       <footer>
         <img src="images/back-to-top.png" alt="back to top" class="back-to-top">
         <h4>Let's connect!</h4>
-        <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png">
-        <img src="images/facebook-icon.png" alt="images/facebook-icon.png">
-        <img src="images/email-icon.png" alt="images/email-icon.png">
+        <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="">
+        <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="">
+        <img src="images/email-icon.png" alt="images/email-icon.png" class="">
         <h6>Copyright Alana Macedo 2020</h6>
       </footer>
   </body>
