--- a/project.html
+++ b/project.html
@@ -219,9 +219,11 @@
       <footer>
         <img src="images/back-to-top.png" alt="back to top" class="back-to-top">
         <h4>Let's connect!</h4>
-        <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="">
-        <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="">
-        <img src="images/email-icon.png" alt="images/email-icon.png" class="">
+        <div class="footer-icons">
+          <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media">
+          <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media">
+          <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media">
+        </div>
         <h6>Copyright Alana Macedo 2020</h6>
       </footer>
   </body>
