--- a/project.html
+++ b/project.html
@@ -11,13 +11,14 @@
   <body>
     <header>
       <img src="images/my-logo.png" alt="images/my-logo.png">
+      <img src="images/hamburger-nav.png" alt="nav" class="hamburger-nav">
     </header>
     <div class="main-container">
       <div class="box-1">
         <img src="images/Vision-logo.png" alt="project-name" class="project-name">
         <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
         <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final">VIEW PROTOTYPE</a>
-        <img src="images/desktop-proto.png" alt="images/desktop-proto.png">
+        <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
       </div>
       <h2>Design roles</h2>
         <p>UX Research and Design
@@ -60,19 +61,21 @@
                 <p>I conducted a user survey to better understand how and why users use cloud storage. I knew that users liked that they could quickly share content with others, but I wanted to know if they had a process for brainstorming, such as using
                   mood or vision boards.
                 </p>
-                <img src="images/ux-graph.png" alt="" class="center">
+                <img src="images/ux-graph.png" alt="" class="center" id="ux-graph">
                 <p>What people use their cloud storage for most
                 </p>
-                <img src="images/ux-chart.png" alt="" class="center">
+                <img src="images/ux-chart.png" alt="" class="center" id="ux-chart">
                 <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                 </p>
               <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit">VIEW SURVEY</a>
             </article>
             <article>
               <h3>Competitve Analysis</h3>
-                <img src="images/google-drive.png" alt="" class="google-drive">
-                <img src="images/dropbox.png" alt="" class="dropbox">
-                <img src="images/icloud.png" alt="" class="icloud">
+              <div class="competitors">
+                  <img src="images/google-drive.png" alt="" class="c-a">
+                  <img src="images/dropbox.png" alt="" class="c-a">
+                  <img src="images/icloud.png" alt="" class="c-a">
+              </div>
                 <p>After learning about the most popular cloud storage applications used by my survey participants, I decided to investigate the key differences between Google Drive, Dropbox and iCloud by conducting a SWOT Analysis. I wanted to learn
                   where their strengths are and where they fall short in order to best determine the most important features and how we could enter the market. Some of the strengths were excellent integration and the opportunity to create content within,
                   while a weakness was lack of ability to support tagging. While Google Drive and Dropbox do not support tagging, this creates an opportunity for a competitor to enter the market, which will allow users to connect and collaborate quicker.
@@ -104,10 +107,10 @@
             <h3>User Flows</h3>
               <p>From the stories, I sketched out each individual flow to begin to create the content strategy.
               </p>
-              <img src="images/onboarding-flow.png" alt="" class="center">
-              <img src="images/create-flow.png" alt="" class="center">
-              <img src="images/share-flow.png" alt="" class="center">
-              <img src="images/move-flow.png" alt="" class="center">
+              <img src="images/onboarding-flow.png" alt="" class="center" id="flows">
+              <img src="images/create-flow.png" alt="" class="center" id="flows">
+              <img src="images/share-flow.png" alt="" class="center" id="flows">
+              <img src="images/move-flow.png" alt="" class="center" id="flows">
             <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing">VIEW USER FLOWS</a>
             <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit">VIEW CONTENT STRATEGY</a>
           </article>
@@ -116,8 +119,8 @@
               <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore,
                 changed the calendar to a vertical scroll that moves with real-time.
               </p>
-              <img src="images/homepage-sketch.png" alt="" class="center">
-              <img src="images/homepage-wireframe.png" alt="" class="center">
+              <img src="images/homepage-sketch.png" alt="" class="center" id="wireframes">
+              <img src="images/homepage-wireframe.png" alt="" class="center" id="wireframes">
             <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing">VIEW WIREFRAME SKETCHES</a>
             <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1">VIEW WIREFRAMES</a>
             <h3>Additional Testing</h3>
@@ -126,7 +129,7 @@
                 by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                 higher in the hierarchy.
               </p>
-              <img src="images/user-testing-sketches.png" alt="" class="center">
+              <img src="images/user-testing-sketches.png" alt="" class="center" id="wireframes">
           </article>
       </section>
       <section>
@@ -136,32 +139,35 @@
                 <h3>Research and Sketching</h3>
                   <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
                   </p>
-                  <img src="images/mindmap" alt="">
+                  <img src="images/mindmap.png" alt="" class="center" id="brainstorming">
+                  <img src="images/list-making.png" alt="" class="center" id="brainstorming">
                   <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
                     about vision.</p>
-                  <img src="images/list-making" alt="">
+
                   <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
                     a clear path to reach their destination.
                   </p>
-                  <img src="images/vision-sketches.png" alt="" class="center">
+                  <img src="images/vision-sketches.png" alt="" class="center" id="brainstorming">
               </article>
               <article>
                 <h3>Refining</h3>
                   <p>After sketching out logos, I knew that the logo was to remain simple in order to convey a clean feel. I brought my favorite designs into Figma and began exploring the concepts until I reached my final design.
                   </p>
+                <div class="logos">
                   <img src="images/black-circle-v.png" alt="">
                   <img src="images/galaxy-v.png" alt="">
                   <img src="images/black-v.png" alt="">
                   <img src="images/main-logo.png" alt="">
+                </div>
               </article>
               <article>
                 <h3>Style Guide</h3>
                   <p>Logos
                   </p>
-                  <img src="images/main-logo.png" alt="" class="center">
-                  <img src="images/vision-type-logo.png" alt="" class="center">
+                  <img src="images/main-logo.png" alt="" class="center" id="main-logo">
+                  <img src="images/vision-type-logo.png" alt="" class="center" id="type-logo">
                   <p>Color Palette</p>
-                  <img src="images/color-palette.png" alt="" class="center">
+                  <img src="images/color-palette.png" alt="" class="center" id="color-palette">
                   <p>Typeface</p>
                   <p>H1 - Muli Bold 36 pts
                     Muli ExtraLight 36 pts in template
@@ -184,9 +190,9 @@
               <h3>Hi-Fidelity Prototype</h3>
                 <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                   remained cohesive.</p>
-                <img src="images/preference-test-1.png" alt="" class="center">
-                <img src="images/preference-test-2.png" alt="" class="center">
-                <img src="images/first-hifi.png" alt="" class="center">
+                <img src="images/preference-test-1.png" alt="" class="center" id="preference-test">
+                <img src="images/preference-test-2.png" alt="" class="center" id="preference-test">
+                <img src="images/first-hifi.png" alt="" class="center" id="preference-test">
                 <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                   try a new approach that allowed users to easily change without excessive scrolling.
 
