--- a/project.html
+++ b/project.html
@@ -11,40 +11,42 @@
   <body>
     <header>
       <img src="images/my-logo.png" alt="images/my-logo.png">
-      <img src="images/hamburger-nav.png" alt="nav" class="hamburger-nav">
+      <a href="" class="top-nav">Work</a>
+      <a href="" class="top-nav">About</a>
+      <a href="" class="top-nav">Resume</a>
     </header>
     <div class="main-container">
       <div class="box-1">
         <img src="images/Vision-logo.png" alt="project-name" class="project-name">
         <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-        <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final">VIEW PROTOTYPE</a>
+        <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button">VIEW PROTOTYPE</a>
         <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
       </div>
-      <h2>Design roles</h2>
-        <p>UX Research and Design
-        Branding and Identity
-        Visual Design
-        </p>
-      <h2>Deliverables</h2>
-        <p>User Surveys
-          User Interviews
-          Competitve Analysis
-          User Personas
-          User Stories and Flows
-          Content Strategy
-          Wireframes
-          Branding and Identity
-          Prototyping
-          A/B Testing
-          Visual Design
-        </p>
-      <h2>Tools</h2>
-        <p>Pen/Paper
-          Google Suite
-          Figma
-          Adobe Illustrator
-          Usability Hub
-        </p>
+      <ul><h2>Design roles</h2>
+        <li>UX Research and Design</li>
+        <li>Branding and Identity</li>
+        <li>Visual Design</li>
+      </ul>
+      <ul><h2>Deliverables</h2>
+        <li>User Surveys</li>
+        <li>User Interviews</li>
+        <li>Competitve Analysis</li>
+        <li>User Personas</li>
+        <li>User Stories and Flows</li>
+        <li>Content Strategy</li>
+        <li>Wireframes</li>
+        <li>Branding and Identity</li>
+        <li>Prototyping</li>
+        <li>A/B Testing</li>
+        <li>Visual Design</li>
+        </ul>
+      <ul><h2>Tools</h2>
+        <li>Pen/Paper</li>
+        <li>Google Suite</li>
+        <li>Figma</li>
+        <li>Adobe Illustrator</li>
+        <li>Usability Hub</li>
+      </ul>
       <section>
         <h2>The Problem:</h2>
           <p>Users were frustrated with juggling multiple apps to manage their day and collaborate with others on projects.
@@ -67,7 +69,7 @@
                 <img src="images/ux-chart.png" alt="" class="center" id="ux-chart">
                 <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                 </p>
-              <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit">VIEW SURVEY</a>
+              <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button">VIEW SURVEY</a>
             </article>
             <article>
               <h3>Competitve Analysis</h3>
@@ -80,7 +82,7 @@
                   where their strengths are and where they fall short in order to best determine the most important features and how we could enter the market. Some of the strengths were excellent integration and the opportunity to create content within,
                   while a weakness was lack of ability to support tagging. While Google Drive and Dropbox do not support tagging, this creates an opportunity for a competitor to enter the market, which will allow users to connect and collaborate quicker.
                 </p>
-              <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing">VIEW COMPETITIVE ANALYSIS</a>
+              <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing" class="button">VIEW COMPETITIVE ANALYSIS</a>
             </article>
             <article>
               <H3>User Personas</H3>
@@ -89,7 +91,7 @@
                 <img src="images/Laura.png" alt="" class="center">
                 <img src="images/Jess.png" alt="" class="center">
                 <img src="images/Alex.png" alt=""class="center">
-              <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1">VIEW USER PERSONAS</a>
+              <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1" class="button">VIEW USER PERSONAS</a>
             </article>
           </div>
       </section>
@@ -111,8 +113,8 @@
               <img src="images/create-flow.png" alt="" class="center" id="flows">
               <img src="images/share-flow.png" alt="" class="center" id="flows">
               <img src="images/move-flow.png" alt="" class="center" id="flows">
-            <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing">VIEW USER FLOWS</a>
-            <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit">VIEW CONTENT STRATEGY</a>
+            <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button">VIEW USER FLOWS</a>
+            <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button">VIEW CONTENT STRATEGY</a>
           </article>
           <article>
             <h3>Wireframes</h3>
@@ -121,8 +123,8 @@
               </p>
               <img src="images/homepage-sketch.png" alt="" class="center" id="wireframes">
               <img src="images/homepage-wireframe.png" alt="" class="center" id="wireframes">
-            <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing">VIEW WIREFRAME SKETCHES</a>
-            <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1">VIEW WIREFRAMES</a>
+            <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button">VIEW WIREFRAME SKETCHES</a>
+            <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button">VIEW WIREFRAMES</a>
             <h3>Additional Testing</h3>
 
               <p>Once the digital wireframes were created I conducted usability testing to gain insight on how others view and move through the site. The findings were that it was not intuitive to look in drive for the Upload button. This was solved
@@ -154,10 +156,7 @@
                   <p>After sketching out logos, I knew that the logo was to remain simple in order to convey a clean feel. I brought my favorite designs into Figma and began exploring the concepts until I reached my final design.
                   </p>
                 <div class="logos">
-                  <img src="images/black-circle-v.png" alt="">
-                  <img src="images/galaxy-v.png" alt="">
-                  <img src="images/black-v.png" alt="">
-                  <img src="images/main-logo.png" alt="">
+                  <img src="images/logos-row.png" class="center" alt="">
                 </div>
               </article>
               <article>
@@ -169,18 +168,19 @@
                   <p>Color Palette</p>
                   <img src="images/color-palette.png" alt="" class="center" id="color-palette">
                   <p>Typeface</p>
-                  <p>H1 - Muli Bold 36 pts
-                    Muli ExtraLight 36 pts in template
-                    H2 - Muli Semibold 24 pts
-                    H3 - Muli Semibold 16 pts
-                    H5 - Roboto Regular 14 pts
-                    Body - Muli Regular 14 pts
-                    Pop-ups - Montserrat ExtraLight 24 pts
-                    Montserrat Regular 24 pts when filled in
-                    Buttons - Roboto Black 15 pts
-                    Document Tile - Montserrat Medium 12 pts
-                  </p>
-                <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1">VIEW STYLE GUIDE</a>
+                  <ul class="typeface">
+                    <li>H1 - Muli Bold 36 pts</li>
+                    <li>Muli ExtraLight 36 pts in template</li>
+                    <li>H2 - Muli Semibold 24 pts</li>
+                    <li>H3 - Muli Semibold 16 pts</li>
+                    <li>H5 - Roboto Regular 14 pts</li>
+                    <li>Body - Muli Regular 14 pts</li>
+                    <li>Pop-ups - Montserrat ExtraLight 24 pts</li>
+                    <li>Montserrat Regular 24 pts when filled in</li>
+                    <li>Buttons - Roboto Black 15 pts</li>
+                    <li>Document Tile - Montserrat Medium 12 pts</li>
+                  </ul>
+                <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1" class="button">VIEW STYLE GUIDE</a>
               </article>
             </div>
         </section>
